<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="com.tangs.myapplication.ui.main.viewmodels.SettingViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            app:title="@string/app_name"
            app:titleTextColor="?attr/colorOnSurface"
            app:menu="@menu/setting_actions"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField"
                style="@style/AppTextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/phone_number"
                app:startIconDrawable="@android:drawable/stat_sys_phone_call">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="phone"
                    android:text="@={viewmodel.phone}" />
            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="8dp"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/getPhoneNumber"
                style="@style/AppButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_phone_number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/platforms"
                style="@style/AppExposedDropdownMenu"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:hint="@string/platform"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button">

                <AutoCompleteTextView
                    android:id="@+id/filled_exposed_dropdown"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:inputType="none"
                    android:minWidth="100dp"
                    android:text="@={viewmodel.platform}"
                    tools:ignore="LabelFor" />
            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="8dp"
                android:layout_height="match_parent" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/AppTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/upload_address">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/host"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:text="@={viewmodel.host}" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/records"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:padding="8dp"
            app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
            app:spanCount="2"
            tools:listitem="@layout/list_item_record" />

    </LinearLayout>
</layout>